--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
                 <ul id="navbar" class="navbar">
                     <li><a href="index.html">Home</a></li>
                     <li><a  href="shop.html">Shop</a></li>
-                    <li><a class="active" href="blog.html">Blog</a></li>
+                    <li><a class="active" href="blog.html">Blog Page</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
