--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
             <div>
                 <ul id="navbar" class="navbar">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="shop.html">Shop page</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
